--- a/package.json
+++ b/package.json
@@ -1,34 +1,35 @@
 {
-  "name": "glove",
+  "name": "reactv",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write \"{src/**/*.{js,jsx,ts,tsx,html}, index.html}\""
   },
   "dependencies": {
     "@tanstack/react-query": "^5.81.5",
-    "@tanstack/react-router": "^1.124.0",
-    "@tanstack/react-router-devtools": "^1.124.0",
+    "@tanstack/react-router": "^1.120.11",
+    "@tanstack/react-router-devtools": "^1.120.11",
+    "prettier": "^3.5.3",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
-    "@tanstack/router-plugin": "^1.124.0",
+    "@tailwindcss/vite": "^4.1.11",
+    "@tanstack/router-plugin": "^1.120.11",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react-swc": "^3.9.0",
-    "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
