--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "format": "prettier --write \"{src/**/*.{js,jsx,ts,tsx,html}, index.html}\""
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.18",
+    "@fullcalendar/daygrid": "^6.1.18",
+    "@fullcalendar/react": "^6.1.18",
     "@tanstack/react-query": "^5.81.5",
     "@tanstack/react-router": "^1.120.11",
     "@tanstack/react-router-devtools": "^1.120.11",
